@@ -1,3 +1,7 @@
+2009-05-06  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/interp.test: interp-20.50 test for Bug 2486550.
+
 2009-05-04  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclOO.c (InitFoundation, AllocObject, AllocClass):
